--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,13 @@
+body {
+  overflow-x: hidden !important;
+}
+body::-webkit-scrollbar {
+  display: none !important;
+  -ms-overflow-style: none !important;
+  /* IE and Edge */
+  scrollbar-width: none !important;
+  /* Firefox */
+}
 .webkit {
 -ms-overflow-style: none;
   /* IE and Edge */
