--- a/src/mobile/styles/index.css
+++ b/src/mobile/styles/index.css
@@ -18,8 +18,8 @@
 }
 .top-right {
   position: absolute;
-  top: 0.5rem;
-  right: 1rem;
+  top: 0.5em;
+  right: 1em;
   z-index: 4;
   background-color: #28282B;
   padding: 1rem;
@@ -67,17 +67,46 @@
 }
 .nav {
   background-color: #28282B;
-  width: 7rem;
+  width: 8em;
+}
+.close-btn {
+  right: 2px;
+  top: 0.5rem;
+  padding: 0;
+}
+.top-btn {
+  background-color: white;
+  position: absolute;
+  width: 40px;
+  font-size: 20px;
+  padding: 10px 0;
+  bottom: 1rem;
+  z-index: 10;
+  display: flex; 
+  align-items: center;
+  justify-content: center;
+  color: red;
+  border: solid 3px dodgerblue;;
 }
 /* media queries */
 @media (max-width: 600px) {
   html {
     font-size: 12px;
   }
+  .nav {
+    font-size: 14px;
+  }
+  .top-right {
+    font-size: 12.5px;
+    right: 1.5rem;
+  }
 }
 @media (max-width: 420px) {
   html {
     font-size: 9px;
+  }
+  .top-right {
+    font-size: 10px;
   }
 }
 @media (max-width: 400px) {
