--- a/src/mobile/styles/index.css
+++ b/src/mobile/styles/index.css
@@ -15,6 +15,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  scroll-behavior: smooth;
 }
 .top-right {
   position: absolute;
